--- a/cart.html
+++ b/cart.html
@@ -14,9 +14,9 @@
             <a href="#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
             <ul>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#footer">Contact</a></li>
+                <li><a href="index.html/#home">Home</a></li>
+                <li><a href="index.html/#products">Products</a></li>
+                <li><a href="index.html/#footer">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,13 +25,11 @@
     <main>
         <div id="cart"></div>
         <div class="cart-summary">
-          <h2>Cart Summary</h2>
-          <p>Total: ₹<span id="total">0</span></p>
-          <button id="checkout-btn">Checkout</button>
+            <h2>Cart Summary</h2>
+            <p>Total: ₹<span id="total">0</span></p>
+            <button id="checkout-btn">Checkout</button>
         </div>
-      </main>
-      <script src="cart.js"></script>
-
+    </main>
 
     <footer class="footer" id="footer">
         <div class="footer-column">
@@ -60,6 +58,7 @@
         <p>&copy; 2024 National Handloom. All Rights Reserved. Developed by <a
                 href="https://www.linkedin.com/in/anasali44/" class="ali">Ali Ahamad Khan</a></p>
     </div>
+    <script src="cart.js"></script>
     <script src="script.js"></script>
 </body>
 
