--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
+            <a href="index.html/#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
