--- a/cart.html
+++ b/cart.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <nav>
-            <a href="#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
+            <a href="index.html/#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
             <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#footer">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
-                <li><a href="index.html/#home">Home</a></li>
-                <li><a href="index.html/#products">Products</a></li>
-                <li><a href="index.html/#footer">Contact</a></li>
             </ul>
         </nav>
     </header>
