--- a/cart.html
+++ b/cart.html
@@ -34,7 +34,7 @@
     <footer class="footer" id="footer">
         <div class="footer-column">
             <h3>Contact Info</h3>
-            <p>Phone: +91 8788237913</p>
+            <p><a href="tel:7071313626"></p>
             <p><a href="mailto:support@nh.com">support@nationalhandloom.com</a></p>
         </div>
 
