--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <footer class="footer" id="footer">
         <div class="footer-column">
             <h3>Contact Info</h3>
-            <p>Phone: +91 8788237913</p>
+            <p>Phone: <a href="tel:+91 8788237913">+91 8788237913</a></p>
             <p><a href="mailto:support@nh.com">support@nationalhandloom.com</a></p>
         </div>
 
