--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
         <h2>Our Collection</h2>
         <div class="product-grid">
 
-            <div class="product-card" data-id="1" data-name="Curtain 1" data-price="899">
+            <div class="product-card" data-id="1" data-name="Classic White Curtain" data-price="899">
                 <img src="Images/curatin-1.jpg" alt="Curtain 1">
                 <h3>Classic White Curtain</h3>
                 <p>₹899.00</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
-            <div class="product-card" data-id="2" data-name="Curtain 2" data-price="799">
+            <div class="product-card" data-id="2" data-name="Classic Green Cutairn" data-price="799">
                 <img src="Images/curtain-2.jpg" alt="Curtain 2">
-                <h3>Classic Green Curtain</h3>
+                <h3>Classic Green Cutairn</h3>
                 <p>₹799.00</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
-            <div class="product-card" data-id="3" data-name="Curtain 3" data-price="599">
+            <div class="product-card" data-id="3" data-name="Classic Net Curtain" data-price="599">
                 <img src="Images/curtain-3.jpg" alt="Curtain 3">
                 <h3>Classic Net Curtain</h3>
                 <p>₹599.00</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
-            <div class="product-card" data-id="4" data-name="Curtain 4" data-price="999">
+            <div class="product-card" data-id="4" data-name="Jacquard Curtain" data-price="999">
                 <img src="Images/curtain-4.jpg" alt="Curtain 1">
                 <h3>Jacquard Curtain</h3>
                 <p>₹999.00</p>
