--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="index.html"><img src="Images/logo.jpg" alt="" class="logo"></a>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#footer">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
