--- a/cart.html
+++ b/cart.html
@@ -14,8 +14,8 @@
             <a href="index.html"><img src="Images/logo.jpg" alt="" class="logo"></a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#footer">Contact</a></li>
+                <li><a href="index.html">Products</a></li>
+                <li><a href="index.html">Contact</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
