--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,11 @@
     <header>
         <nav>
             <a href="index.html"><img src="Images/logo.jpg" alt="" class="logo"></a>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Products</a></li>
