--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header>
         <nav>
             <a href="index.html/#home"><img src="Images/logo.jpg" alt="" class="logo"></a>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
