--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-              </div>
+            </div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
@@ -30,7 +30,7 @@
         <div class="text">
             <h1>Welcome to <span class="name">National Handloom</span></h1>
             <h4>Elegant Curtains for Every Room</h4>
-            <p>Find the perfect curtains to style your home.</p>
+            <p>Find the perfect curtains to style your home</p>
             <a href="#products" class="btn">Shop Now</a>
         </div>
     </section>
