--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 <p>₹999.00</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
+            <div class="product-card" data-id="4" data-name="Jacquard Curtain" data-price="799">
+                <img src="Images/curtain-4.jpg" alt="Curtain 1">
+                <h3>Abdullah Curtain</h3>
+                <p>₹799.00</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
 
 
             <!-- Add more products as needed -->
