--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="product-card" data-id="4" data-name="Jacquard Curtain" data-price="799">
                 <img src="Images/curtain-4.jpg" alt="Curtain 1">
-                <h3>Abdullah Curtain</h3>
+                <h3>Jacquard Curtain</h3>
                 <p>₹799.00</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
