--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#footer">Contact</a></li>
-                <li><a href="cart.html">Cart</a></li>
+                <!-- <li><a href="cart.html">Cart</a></li> -->
             </ul>
         </nav>
     </header>
@@ -42,34 +42,28 @@
             <div class="product-card" data-id="1" data-name="Classic White Curtain" data-price="899">
                 <img src="Images/curatin-1.jpg" alt="Curtain 1">
                 <h3>Classic White Curtain</h3>
-                <p>₹899.00</p>
-                <button class="add-to-cart">Add to Cart</button>
+                <p>Coming Soon</p>
+
+                <!-- <button class="add-to-cart">Add to Cart</button> -->
             </div>
             <div class="product-card" data-id="2" data-name="Classic Green Cutairn" data-price="799">
                 <img src="Images/curtain-2.jpg" alt="Curtain 2">
                 <h3>Classic Green Cutairn</h3>
-                <p>₹799.00</p>
-                <button class="add-to-cart">Add to Cart</button>
+                <p>Coming Soon</p>
+                <!-- <button class="add-to-cart">Add to Cart</button> -->
             </div>
             <div class="product-card" data-id="3" data-name="Classic Net Curtain" data-price="599">
                 <img src="Images/curtain-3.jpg" alt="Curtain 3">
                 <h3>Classic Net Curtain</h3>
-                <p>₹599.00</p>
-                <button class="add-to-cart">Add to Cart</button>
+                <p>Coming Soon</p>
+                <!-- <button class="add-to-cart">Add to Cart</button> -->
             </div>
             <div class="product-card" data-id="4" data-name="Jacquard Curtain" data-price="999">
                 <img src="Images/curtain-4.jpg" alt="Curtain 1">
                 <h3>Jacquard Curtain</h3>
-                <p>₹999.00</p>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card" data-id="4" data-name="Jacquard Curtain" data-price="799">
-                <img src="Images/curtain-4.jpg" alt="Curtain 1">
-                <h3>Jacquard Curtain</h3>
-                <p>₹799.00</p>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            
+                <p>Coming Soon</p>
+                <!-- <button class="add-to-cart">Add to Cart</button> -->
+            </div>           
 
 
             <!-- Add more products as needed -->
