--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <h3>Follow Us</h3>
             <div class="social-icons">
                 <a href="#"><img src="Images/facebook.png" alt="" class="social-icons"></a>
-                <a href="#"><img src="Images/instagram.png" alt="" class="social-icons"></a>
-                <a href="#"><img src="Images/social.png" alt="" class="social-icons"></a>
+                <a href="https://www.instagram.com/nationalhandloom/"><img src="Images/instagram.png" alt="" class="social-icons"></a>
+                <a href="https://api.whatsapp.com/send?phone=+918788237913&text=Hello!"><img src="Images/social.png" alt="" class="social-icons"></a>
             </div>
         </div>
     </footer>
